Auto BOM Calculation file UI changed

--- a/app/src/main/res/layout/activity_compoundpricecalculation.xml
+++ b/app/src/main/res/layout/activity_compoundpricecalculation.xml
@@ -294,6 +294,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd1"
+            android:hint="65.630"
+            android:text="65.630"
             android:layout_alignBottom="@+id/rn1"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -307,6 +309,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd2"
+            android:hint="12.500"
+            android:text="12.500"
             android:layout_alignBottom="@+id/rn2"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -319,6 +323,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd3"
+            android:hint="32.000"
+            android:text="32.000"
             android:layout_alignBottom="@+id/rn3"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -331,6 +337,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd4"
+            android:hint="68.000"
+            android:text="68.000"
             android:layout_alignBottom="@+id/rn4"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -343,6 +351,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd5"
+            android:hint="139.000"
+            android:text="139.000"
             android:layout_alignBottom="@+id/rn5"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -355,6 +365,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd6"
+            android:hint="151.000"
+            android:text="151.000"
             android:layout_alignBottom="@+id/rn6"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -367,6 +379,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd7"
+            android:hint="122.000"
+            android:text="122.000"
             android:layout_alignBottom="@+id/rn7"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -379,6 +393,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd8"
+            android:hint="113.000"
+            android:text="113.000"
             android:layout_alignBottom="@+id/rn8"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -391,6 +407,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd9"
+            android:hint="155.000"
+            android:text="155.000"
             android:layout_alignBottom="@+id/rn9"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -403,6 +421,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd10"
+            android:hint="458.000"
+            android:text="458.000"
             android:layout_alignBottom="@+id/rn10"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -415,6 +435,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd11"
+            android:hint="140.000"
+            android:text="140.000"
             android:layout_alignBottom="@+id/rn11"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -427,6 +449,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd12"
+            android:hint="1325.000"
+            android:text="1325.000"
             android:layout_alignBottom="@+id/rn12"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -439,6 +463,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd13"
+            android:hint="129.000"
+            android:text="129.000"
             android:layout_alignBottom="@+id/rn13"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -451,6 +477,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd14"
+            android:hint="62.000"
+            android:text="62.000"
             android:layout_alignBottom="@+id/rn14"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -463,6 +491,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd15"
+            android:hint="34.000"
+            android:text="34.000"
             android:layout_alignBottom="@+id/rn15"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -475,6 +505,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd16"
+            android:hint="74.500"
+            android:text="74.500"
             android:layout_alignBottom="@+id/rn16"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -487,6 +519,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd17"
+            android:hint="160.000"
+            android:text="160.000"
             android:layout_alignBottom="@+id/rn17"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -499,6 +533,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd18"
+            android:hint="95.000"
+            android:text="95.000"
             android:layout_alignBottom="@+id/rn18"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -511,6 +547,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd19"
+            android:hint="24.500"
+            android:text="24.500"
             android:layout_alignBottom="@+id/rn19"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
@@ -523,6 +561,8 @@
             android:layout_marginLeft="30sp"
             android:ems="10"
             android:id="@+id/rd20"
+            android:hint="72.000"
+            android:text="72.000"
             android:layout_alignBottom="@+id/rn20"
             android:layout_toRightOf="@+id/denll1"
             android:layout_toEndOf="@+id/denll1"
