--- a/app/src/main/res/layout/activity_aboutme.xml
+++ b/app/src/main/res/layout/activity_aboutme.xml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.anchor.pvc.Aboutme">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" tools:context="com.anchor.pvc.Aboutme"> <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/Contact_us" android:id="@+id/contactus_textview" android:layout_alignParentTop="true" android:textSize="20sp" android:layout_centerHorizontal="true" /> <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/contactus_textview" android:layout_alignParentStart="true" android:id="@+id/linearLayout" android:layout_marginTop="30sp"> <TextView android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gmail:"
+            android:textColor="@color/colorAccent"
+            android:id="@+id/text1"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="80sp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="bibhu065@gmail.com"
+            android:textColor="#000"
+            android:id="@+id/text2"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:layout_marginLeft="20sp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            />
+
+
+    </LinearLayout>
+
+
+
 
 </RelativeLayout>
