--- a/app/src/main/res/layout/formulationcontent_main.xml
+++ b/app/src/main/res/layout/formulationcontent_main.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:gravity="center"
+        android:textColor="@color/Black"
         android:textSize="24sp"
         android:text="@string/basic_formulation" />
 </RelativeLayout>
