--- a/app/src/main/res/layout/formulationnav_header.xml
+++ b/app/src/main/res/layout/formulationnav_header.xml
@@ -15,7 +15,7 @@
         android:layout_weight="1"
         android:layout_height="0dp" />
     <TextView
-        android:id="@+id/tv_email"
+        android:id="@+id/compound_details"
         android:textColor="@color/White"
         android:textSize="18sp"
         android:layout_gravity="center"
