--- a/app/src/main/res/layout/formulationcontent_main.xml
+++ b/app/src/main/res/layout/formulationcontent_main.xml
@@ -4,17 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/White"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.anchor.pvc.Basicformulation"
     tools:showIn="@layout/activity_basicformulation">
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:gravity="center"
-        android:textColor="@color/Black"
-        android:textSize="24sp"
-        android:text="@string/basic_formulation" />
+    </FrameLayout>
+
 </RelativeLayout>
